--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,10 @@ main {
     flex-direction: column;
 }
 
+a:link {
+    color: #000;
+}
+
 /*******************/
 /**     Header    **/
 /*******************/
